# covidiometro.it

./: .gitignore  README.md  manage.py  pyproject.toml
covidiometro/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
covidiometro/settings/: __init__.py
covidiometro/settings/components/: cache.py  celery.py  common.py  database.py  gitcoviddi.py
covidiometro/settings/environments/development/: __init__.py  docker-compose.yml
gitcoviddi/: admin.py  apps.py  models.py  tasks.py
gitcoviddi/migrations/: 0001_initial.py
