[tool.poetry]
name = "covidiometro"
version = "5.0"
description = "site for covidiometro.it"
authors = ["Radu Andries"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0"
celery = {extras = ["redis"], version = "^5.2.1"}
django-celery-results = "^2.2.0"
django-sockpuppet = {extras = ["lxml"], version = "^0.6.0"}
git-adapter = "^0.2.5"
django-split-settings = "^1.1.0"
psycopg2 = "^2.9.3"
django-celery-beat = {git = "https://github.com/celery/django-celery-beat", rev = "d25a0afd818da5e85ff660c27ab23957195b3416"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
